logs/dag_id=Projet1/run_id=manual__2023-11-18T16:19:39.883714+00:00/task_id=create_table/attempt=1.log
[2023-11-18T16:19:43.112+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-18T16:19:39.883714+00:00 [queued]>
[2023-11-18T16:19:43.123+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-18T16:19:39.883714+00:00 [queued]>
[2023-11-18T16:19:43.124+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2023-11-18T16:19:43.142+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-18 16:19:39.883714+00:00
[2023-11-18T16:19:43.148+0000] {standard_task_runner.py:57} INFO - Started process 66379 to run task
[2023-11-18T16:19:43.153+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'create_table', 'manual__2023-11-18T16:19:39.883714+00:00', '--job-id', '250', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpo7739b32']
[2023-11-18T16:19:43.154+0000] {standard_task_runner.py:85} INFO - Job 250: Subtask create_table
[2023-11-18T16:19:43.204+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.create_table manual__2023-11-18T16:19:39.883714+00:00 [running]> on host fb26c01043df
[2023-11-18T16:19:43.288+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-18T16:19:39.883714+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-18T16:19:39.883714+00:00'
[2023-11-18T16:19:43.291+0000] {sql.py:274} INFO - Executing: --CREATE TABLE IF NOT EXISTS Urgences(
    --id_departememnt INTEGER,
    --sursaud_cl_age_corona FLOAT, 
    --nbre_pass_corona FLOAT, 
    --nbre_pass_tot FLOAT, 
    --nbre_hospit_corona FLOAT,
    --nbre_pass_corona_h FLOAT, 
    --nbre_pass_corona_f FLOAT, 
    --nbre_pass_tot_h FLOAT, 
    --nbre_pass_tot_f FLOAT,
    --nbre_hospit_corona_h FLOAT, 
    --nbre_hospit_corona_f FLOAT, 
   -- nbre_acte_corona FLOAT, 
    --nbre_acte_tot FLOAT,
    --nbre_acte_corona_h FLOAT, 
    --nbre_acte_corona_f FLOAT, 
    --nbre_acte_tot_h FLOAT, 
  --  nbre_acte_tot_f FLOAT
----);

CREATE TABLE IF NOT EXISTS "D"
(
    num_dep VARCHAR(255),
    dep_name VARCHAR(255),
    region_name INTEGER VARCHAR(255)
);
[2023-11-18T16:19:43.302+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-18T16:19:43.310+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-18T16:19:43.331+0000] {sql.py:418} INFO - Running statement: --CREATE TABLE IF NOT EXISTS Urgences(
    --id_departememnt INTEGER,
    --sursaud_cl_age_corona FLOAT, 
    --nbre_pass_corona FLOAT, 
    --nbre_pass_tot FLOAT, 
    --nbre_hospit_corona FLOAT,
    --nbre_pass_corona_h FLOAT, 
    --nbre_pass_corona_f FLOAT, 
    --nbre_pass_tot_h FLOAT, 
    --nbre_pass_tot_f FLOAT,
    --nbre_hospit_corona_h FLOAT, 
    --nbre_hospit_corona_f FLOAT, 
   -- nbre_acte_corona FLOAT, 
    --nbre_acte_tot FLOAT,
    --nbre_acte_corona_h FLOAT, 
    --nbre_acte_corona_f FLOAT, 
    --nbre_acte_tot_h FLOAT, 
  --  nbre_acte_tot_f FLOAT
----);

CREATE TABLE IF NOT EXISTS "D"
(
    num_dep VARCHAR(255),
    dep_name VARCHAR(255),
    region_name INTEGER VARCHAR(255)
);, parameters: None
[2023-11-18T16:19:43.335+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "VARCHAR"
LINE 25:     region_name INTEGER VARCHAR(255)
                                 ^

[2023-11-18T16:19:43.348+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet1, task_id=create_table, execution_date=20231118T161939, start_date=20231118T161943, end_date=20231118T161943
[2023-11-18T16:19:43.360+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 250 for task create_table (syntax error at or near "VARCHAR"
LINE 25:     region_name INTEGER VARCHAR(255)
                                 ^
; 66379)
[2023-11-18T16:19:43.406+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-18T16:19:43.435+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
